examples/bad/16-main-function-call.wlk
# (main function call)

def f() -> Void:
    main()

def main() -> Void:
    return